# plugin-server

./: .README.md.swp  .gitignore  Cargo.toml  README.md  test.py
examples/c/: build.sh  src.c  test  test.c  test.sh
examples/python/: __init__.py  src.py
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
src/: api.rs  main.rs  server.rs  testing.rs
src/libraries/: .c.rs.swp  c.rs  julia.rs  mod.rs  python.rs  rust.rs
