[package]
name = "plugin-server"
version = "0.0.0"
edition = "2021"

[dependencies]
libloading = "0.7.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
strum = { version = "0.23.0", features = ["derive"] }
warp = "0.3.2"
